--- a/views/information.html
+++ b/views/information.html
@@ -63,7 +63,7 @@
       <select  name="options"  class="form-group">
       <option></option>
       <option value="Username">姓名</option>
-      <option>性别</option>
+      <option value="Sex">性别</option>
       <option>民族</option>
       <option>学历</option>
       <option>身份</option>
